<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisitorsLogActivity">

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/vivo4">

        <LinearLayout
            android:id="@+id/llPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="121dp"
                android:src="@drawable/kologo" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_subtitle_visitorslog"
                android:textColor="@color/md_deep_orange_A200"
                android:textSize="34sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llForm"
                android:layout_width="fill_parent"
                android:layout_height="398dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginLeft="0dp"
                    android:text="First Name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textPersonName"
                    android:minHeight="50dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@drawable/edit_text_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lbLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginLeft="0dp"
                    android:text="Last Name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_background"
                    android:minHeight="50dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@drawable/edit_text_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lbCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginLeft="0dp"
                    android:text="Company"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/editTextCompany"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textPersonName"
                    android:minHeight="50dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@drawable/edit_text_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lbReason"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginLeft="0dp"
                    android:text="Reason"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextReason"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minHeight="50dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:scrollbars="vertical"
                    android:textColor="@drawable/edit_text_color"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_signin"
                style="@style/Button3Blue"
                android:layout_width="261dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_loginwhite"
                android:paddingStart="100dp"
                android:paddingEnd="70dp"
                android:paddingLeft="100dp"
                android:paddingRight="70dp"
                android:text="@string/button_sign_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btClear"
                style="@style/Button3LightBlue"
                android:layout_width="191dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/button_clear"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>